Version 0.3.2Ac8

- Fixed GetBlockheaders. (?)
- Fixed sendgvt under protocol pending.

Version 0.3.2Ac7

- Fixed GetLastVerZipFile to work with new GetOS function.

Version 0.3.2Ac6

- Fix version.

Version 0.3.2Ac5

- Besthash IP capture fixed.

Version 0.3.2Ac4

- Development upgraded to Lazarus v2.2.4 / FPC 3.2.2
- GetOSVersion function improved.
- Removed GVT transfers cap.
- Implemented GVT transfers filter at block time creation.
- GVTs transfer added to rebuild sumary process.
- Update directives now mandatory.
- GetBlockheaders "(" undone to "".
- Besthash IP capture included.

Version 0.3.2Ac3

- Nodes control test commands included.
- Transfer GVTs implemented.
- Restart directive added.

Version 0.3.2Ac2

- Fixed NosoCDG ":" on nodes
- Improved block build pending, to load last block trxs just once.

Version 0.3.2Ac1

- New Seed nodes.

Version 0.3.2Ab9

- Reverification of char '(' on besthashes now produces exitcode = 8.
- Headers solution fields now separated by '(' for RPC server.
- RebuildMyTrx definetly removed.
- Implemented RPC command GetPendingOrders.
- Added RPC command GetBlockPoS.
- Added RPC command GetBlockMNS.
- Fixed RPC command sendfunds.
- Added directive RESTORECFG

Version 0.3.2Ab8

- GetOrderDetails&GetBlockOrders methods redone.
- Blocking dialogs removed from unit time at launch.
- NosoCFG file system implemented.
- Node handling directives added.

Version 0.3.2Ab7

- Fixed bug on IsValidJSON.
- Security blocks adjusted to 4000.
- Sender added as CSV field on RPC orderinfo method.
- Sender added as CSV field on RPC blockorders method.
- GetOrderDetails checks the whole blockchain in FullNode mode.
- Time filter on node incoming connections activated on block 70000.
- Wrong time offset is now a warning, but do not close the app.

Version 0.3.2Ab6

- NSLBlkOrd implemented.
- Fixed error on GetAddressPendingPays and GetAddressBalance not filtering emptystr.
- New test seed node.

Version 0.3.2Ab5

- System mem fixed to 1024 MB max.