@@ -136,7 +136,7 @@
         <PackageName Value="LCL"/>
       </Item7>
     </RequiredPackages>
-    <Units Count="18">
+    <Units Count="19">
       <Unit0>
         <Filename Value="Noso.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -227,6 +227,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="mpSysCheck"/>
       </Unit17>
+      <Unit18>
+        <Filename Value="to_do.txt"/>
+        <IsPartOfProject Value="True"/>
+      </Unit18>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
