@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 844
+  Left = 543
   Height = 560
-  Top = 161
+  Top = 124
   Width = 400
   Caption = 'Noso'
   ClientHeight = 540
@@ -318,7 +318,7 @@ object Form1: TForm1
     Height = 468
     Top = 38
     Width = 400
-    ActivePage = TabConsole
+    ActivePage = tabOptions
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     Font.CharSet = ANSI_CHARSET
@@ -327,7 +327,7 @@ object Form1: TForm1
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     ParentFont = False
-    TabIndex = 1
+    TabIndex = 3
     TabOrder = 0
     object TabWallet: TTabSheet
       Caption = 'Wallet'
@@ -1170,9 +1170,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabSheet3
+        ActivePage = TabOpt_Wallet
         Align = alClient
-        TabIndex = 2
+        TabIndex = 0
         TabOrder = 0
         object TabOpt_Wallet: TTabSheet
           Caption = 'Wallet'
@@ -1477,6 +1477,7 @@ object Form1: TForm1
             Caption = 'Update automatically with directives'
             OnChange = CB_WO_AutoupdateChange
             TabOrder = 10
+            Visible = False
           end
           object Panel7: TPanel
             Left = 0
@@ -1553,6 +1554,7 @@ object Form1: TForm1
             Caption = 'Rebuild transactions'
             OnChange = CB_WO_RebuildTrxChange
             TabOrder = 13
+            Visible = False
           end
         end
         object TabNodeOptions: TTabSheet
